<resources>
    <string name="app_name">Moodo</string>

    <string name="action_settings">Settings</string>

    <string name="action_filter">Filter</string>
    <string name="action_description_filter">Filter tasks</string>
    <string name="action_search">Search</string>
    <string name="action_description_search">Search tasks</string>
    <string name="action_backup">Export database</string>
    <string name="action_description_backup">Export database to file</string>
    <string name="action_restore">Import database</string>
    <string name="action_description_restore">Import database from file</string>
    <string name="action_info">About</string>
    <string name="action_description_about">About Moodo</string>

    <string name="dialog_restore_database">Select database to restore:</string>
    <string name="dialog_backup_success">Backup successfully</string>
    <string name="dialog_backup_not_available">No backups found</string>

    <string name="shift_by_nothing">Today</string>
    <string name="shift_by_one_day">1 day</string>
    <string name="shift_by_two_days">2 days</string>
    <string name="shift_by_one_week">1 week</string>
    <string name="shift_by_one_month">1 month</string>

    <string name="now">now</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="next_week">Next week</string>
    <string name="later">Later</string>

    <string name="task_input_description">Task</string>
    <string name="task_button_delete">Delete</string>
    <string name="task_button_cancel">Cancel</string>
    <string name="task_button_add">Add</string>
    <string name="task_done_at">Last done at %1$s</string>

    <string name="due_date_picker_title">Remind at</string>
    <string name="due_date_custom">Other</string>
    <string name="due_time_suggestion_morning">9:00</string>
    <string name="due_time_suggestion_midday">12:00</string>
    <string name="due_time_suggestion_afternoon">15:00</string>
    <string name="due_time_suggestion_evening">18:00</string>
    <string name="due_time_custom">Other</string>

    <string name="notification_channel_name">Task reminder</string>
    <string name="notification_group_name">Task reminder group</string>
    <string name="notification_channel_description">Notification channel to remind your tasks</string>
    <string name="notification_action_task_done">Done</string>
    <string name="task_button_save">Save</string>
    <string name="task_button_done">Done</string>
    <string name="backlog">Backlog</string>
    <string name="today_nothing_todo">Great, all done for today!</string>
</resources>